<resources>

    <string name="app_name">Index</string>
    <string name="btnopen">Iniciar Seccion</string>
    <string name="viewmsm">¿ Aun no tienes una cuenta ?</string>
    <string name="viewregistrate">Registrate</string>
    <string name="logingmail">Ingrese su correo</string>
    <string name="loginpass">Ingrese su contraseña</string>

    //Defecto Cargando
    <string name="xsolcontenido">Cargando ...</string>

    //Inicio
    <string name="btninisec">Iniciar sección</string>
    <string name="btnvol">Ser voluntario</string>
    <string name="btnnos">Sobre nosotros</string>
    <string name="btnman">Mantente al tanto</string>
    <string name="Logo">logo</string>

    //Splash
    <string name="tituloperf">Inicia Sección</string>
    <string name="tituloconv">Ser Voluntario</string>

    //Sign Out
    <string name="cname">Nombres</string>
    <string name="cedad">Edad</string>
    <string name="cgmail">Correo</string>
    <string name="cpass">Contraseña</string>
    <string name="ccpass">Verifique</string>
    <string name="ccomentario">¿Porque quieres formar parte?</string>
    <string name="btnsignout">Inscribete</string>

    <string name="regname">Ingrese sus nombres</string>
    <string name="regedad">Ingrese su edad</string>
    <string name="reggmail">Ingrese su correo</string>
    <string name="regpass">***********</string>
    <string name="regcpass">***********</string>
    <string name="regcomentarios">Ingrese el motivo de su postulacion</string>

    <string name="btncerrar">Cerrar Seccion</string>

    //Data
    <string name="tvname">Nombre</string>
    <string name="tvlast">Apellidos</string>
    <string name="tvgmail">Correo</string>
    <string name="tvpass">Contraseña</string>
    <string name="tvme">Acerca de mi</string>
    <string name="tvpermisos">Permisos</string>

    <string name="perfilname">***</string>
    <string name="perfilgmail">***</string>
    <string name="perfilpermisos">En espera</string>
    <string name="btnadmi">Cerrar seccion</string>
    <string name="title_activity_menu_user">MenuUser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //NavegationDrawer
    <string name="fragment_perfil">Perfil</string>
    <string name="fragment_eventosvoluntarios">Eventos</string>
    <string name="fragment_eventosadministracion">Eventos Editar</string>
    <string name="fragment_convocatorias">Convocatorias</string>
    <string name="fragment_all_user">Inscripciones Realizadas</string>

    //Fragment Perfil
    <string name="btnchage">Editar perfil</string>
    <string name="btnclose">Cerrar seccion</string>
    <string name="btnsave">Guardar cambios</string>
    <string name="loading">Cargando . . .</string>

    //Splash
    <string name="slashtitle">Proyecto UTP</string>
    <string name="xsubtitle">Voces del Mar</string>
    //Splash Register
    <string name="slashre">Tu solicitud ha sido enviada</string>
    //Splash Evento Creado
    <string name="slashevent">Tu evento ha sido creado</string>
    <string name="slashbtnevent">Regresar a crear eventos</string>

    //Descripcion de convocatoria
    <string name="titulosol">Solicitud</string>
    <string name="xsolname">Nombres : </string>
    <string name="xsolgmail">Correo : </string>
    <string name="xsoledad">Edad : </string>
    <string name="xsolmotivo">¿Porque quieres formar parte?</string>
    <string name="xsolbtnaceptar">Aceptar</string>
    <string name="xsolbtnrechazar">Rechazar</string>

    //Descripcion de Eventos
    <string name="tituloeven">Agregar eventos</string>
    <string name="evenname">Nombre</string>
    <string name="evendesc">Descripcion</string>
    <string name="evenubic">Ubicacion</string>
    <string name="evendate">DD/MM/AAAA</string>
    <string name="eventime">00:00</string>
    <string name="evensubir">Subir Foto</string>
    <string name="evencrear">Crear</string>
    //Fragmento eventos
    <string name="agregareventoslist">Agregar eventos</string>
    //Editar evento
    <string name="editeventeditar">Editar</string>
    <string name="editeventcancelar">Cancelar</string>
    <string name="editeventguardar">Guardar cambios</string>
    //Editar Unirse
    <string name="unirseeventunirse">Asistire</string>
    <string name="unirseeventcancelarunirse">Cancelar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_mapa_evento">MapaEvento</string>
    <string name="Ver_Mapa">Ver Mapa</string>


</resources>