<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/flogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/logingmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/logingmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/logingmail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnstar"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:onClick="StartSeccion"
        android:text="@string/btnopen"
        android:textColor="@color/mar"
        app:layout_constraintBottom_toTopOf="@+id/viewmsm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/viewmsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/viewmsm"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/viewregistrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/viewregistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:minHeight="48dp"
        android:onClick="PresentarConvocatoria"
        android:text="@string/viewregistrate"
        android:textColor="@color/mar"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/loginpass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnstar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
